# magic-dashboard

./: .dockerignore  .flake8  .gitignore  Makefile  README.md  dashboard-ubuntu.Dockerfile  dashboard.Dockerfile  entrypoint.sh  manage.py  pyproject.toml
main/api/: apps.py  serializer.py  urls.py  views.py  views_gitsvn.py  views_health.py  views_task.py
main/authuser/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
main/authuser/migrations/: 0001_initial.py
main/gitsvn/: apps.py  forms.py  tables.py  urls.py  views.py
main/gitsvn/functions/: __init__.py  git_connect.py  git_service.py  gitproject_common.py
main/gitsvn/templates/: gitsvn.html
main/health/: admin.py  apps.py  models.py  urls.py  views.py
main/health/functions/: __init__.py  fitbit_importer.py
main/health/migrations/: 0001_initial.py  0002_fitbitdailyactivity.py  0003_alter_fitbitdailyactivity_distance.py
main/health/templates/: health.html
main/home/: apps.py  forms.py  urls.py  views.py
main/home/templates/: home.html
main/mediamart/: admin.py  apps.py  models.py  urls.py
main/mediamart/migrations/: 0001_initial.py
main/misc/: apps.py  models.py  tables.py  urls.py  views.py
main/task/: apps.py  models.py
main/utility/: __init__.py  common.py  mixins.py  permissions.py
rotary_phone/: app_config.py  asgi.py  settings.py  urls.py  wsgi.py
rotary_phone/templatetags/: template_utility.py
static/pages/: base.css  index.js
static/pages/home/: home.js  (+1 more)
templates/base/: base.html  css.html  js.html  logging.html  navbar.html
templates/registration/: login.html
(+27 files in other folders)
